--- a/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
+++ b/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
@@ -1,57 +1,46 @@
 .meeting-polls{
+  &__body{
+    @apply flex flex-col min-h-screen;
+  }
+
   &__header{
     @apply flex items-center justify-between p-2.5 bg-background border;
   }
 
   &__main{
-    @apply flex;
+    @apply flex grow items-stretch;
   }
 
   &__iframe{
-    @apply flex bg-background [&>*]:grow [&>*]:border-0;
+    @apply flex grow bg-gray-2 [&>*]:grow [&>*]:border-0;
   }
-/*
+
   &__aside{
-    flex: 0;
+    @apply flex-none bg-background-2;
+
     counter-reset: question;
 
-    & + div{
-      flex: 1;
-    }
-
     &.is-open{
-      flex: 0 0 20%;
-
-      & + div{
-        flex: 0 0 80%;
-      }
+      @apply w-1/5 [&+div]:w-4/5;
 
       // shrink iframe when there's two panels
       & + & + div{
-        flex: 0 0 60%;
+        @apply w-3/5;
       }
 
       & + &{
-        border-left: 1px solid #e8e8e8;
+        @apply border-l border-l-background;
       }
     }
   }
 
   &__question{
-    background-color: $white;
-    border-bottom: 1px solid #e8e8e8;
+    @apply bg-white;
 
     summary{
-      @extend .padding-1;
+      @apply p-4 cursor-pointer font-bold text-secondary text-md transition border-b border-b-background hover:bg-background;
 
-      cursor: pointer;
-      font-weight: bold;
-      color: var(--secondary);
       transition: background-color .2s ease-in-out;
-
-      &:hover{
-        background-color: #f4f4f4;
-      }
 
       &::after{
         counter-increment: question;
@@ -59,23 +48,19 @@
       }
 
       & ~ *{
-        padding: 0 1rem 1rem;
+        @apply p-4 space-y-4;
 
         // dynamic content
         > :first-child{
-          font-weight: 600;
-          line-height: 1.25;
+          @apply font-bold;
         }
 
         label{
-          display: flex;
-          align-items: baseline;
-          cursor: pointer;
-          line-height: 1.25;
+          @apply flex items-baseline cursor-pointer;
         }
 
         label + label{
-          margin-top: $global_margin;
+          @apply mt-4;
         }
         // end dynamic content
       }
@@ -99,8 +84,6 @@
   }
 
   &__question--admin{
-    @extend .meeting-polls__question;
-
     summary ~ *{
       border-top: 1px solid #e8e8e8;
       background-color: #f6f6f6;
@@ -108,7 +91,7 @@
 
       a{
         text-decoration: underline;
-        margin-bottom: $global_margin;
+        // margin-bottom: $global_margin;
         display: block;
       }
 
@@ -118,59 +101,38 @@
     }
   }
 
-  &__answer{
-    display: flex;
-    align-items: center;
+  // &__answer{
+  //   display: flex;
+  //   align-items: center;
 
-    &--value{
-      flex: 0 0 15%;
-      font-weight: bold;
-    }
+  //   &--value{
+  //     flex: 0 0 15%;
+  //     font-weight: bold;
+  //   }
 
-    &--bar{
-      flex: 0 0 85%;
-      height: 10px;
-      overflow: hidden;
+  //   &--bar{
+  //     flex: 0 0 85%;
+  //     height: 10px;
+  //     overflow: hidden;
 
-      > *{
-        background-color: var(--primary);
-        height: 100%;
-        opacity: 0;
-      }
-    }
-  }
+  //     > *{
+  //       background-color: var(--primary);
+  //       height: 100%;
+  //       opacity: 0;
+  //     }
+  //   }
+  // }
 
   // vertical flow
   label + &__answer + label{
-    margin-top: 1.5 * $global_margin;
+    @apply mt-6;
   }
 
   &__admin-label{
-    background-color: #9675ce;
-    color: $white;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 1rem;
+    @apply p-4 bg-secondary text-white font-bold text-sm;
   }
 
   &__admin-action{
-    border-top: 1px solid #e8e8e8;
-    padding: .5rem 0;
-    display: flex;
-    align-items: center;
-
-    &:last-child{
-      border-bottom: 1px solid #e8e8e8;
-    }
-
-    :first-child{
-      flex: 0 0 40%;
-    }
-
-    :last-child{
-      flex: 0 0 60%;
-    }
+    @apply py-2 flex items-center border-t-background [&>*]:flex-none first:[&>*]:w-2/5 last:[&>*]:w-3/5
   }
-
-  */
 }
