--- a/decidim-meetings/app/cells/decidim/meetings/join_meeting_button/cancelation_modal.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/join_meeting_button/cancelation_modal.erb
@@ -2,8 +2,8 @@
   <%= decidim_form_for(registration_form, url: meeting_registration_path(model), method: :delete) do |form| %>
     <div data-dialog-container>
       <%= icon "door-open-line" %>
+      <h2 id="dialog-title-meeting-cancelation-confirm-<%= model.id %>" data-dialog-title><%= t("leave", scope: "decidim.meetings.meetings.show") %></h2>
       <div>
-        <div id="dialog-title-meeting-cancelation-confirm-<%= model.id %>" data-dialog-title><%= t("leave", scope: "decidim.meetings.meetings.show") %></div>
 
         <div id="dialog-desc-meeting-cancelation-confirm-<%= model.id %>" class="meeting__cancelation-modal__description"><%= t("leave_confirmation", scope: "decidim.meetings.meetings.show") %></div>
       </div>
