--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
@@ -56,7 +56,7 @@
       <ul class="drawer-metadata__container" data-metadata-footer>
         <%= content_tag :li, resource_reference(meeting), class: "drawer-metadata__item" %>
         <%= content_tag :li, resource_version(meeting, versions_path: meeting_version_path(meeting, meeting.versions.count), **turbo_frame_options(:drawer_content_frame)), class: "drawer-metadata__item" %>
-        <%= content_tag :li, link_to(t("add_to_calendar", scope: "decidim.meetings.meetings.calendar_modal"), nil, remote: true, data: { dialog_open: "calendarShare" }), class: "drawer-metadata__item" %>
+        <%= content_tag :li, link_to(t("add_to_calendar", scope: "decidim.meetings.meetings.calendar_modal"), nil, remote: true, data: { dialog_open: "calendarShare_#{meeting.id}" }), class: "drawer-metadata__item" %>
       </ul>
     </div>
 
@@ -127,4 +127,4 @@
   <% end %>
 <% end %>
 
-<%= render partial: "redesigned_calendar_modal", locals: { ics_url: calendar_meeting_url(meeting), google_url: google_calendar_event_url(meeting) } %>
+<%= render partial: "redesigned_calendar_modal", locals: { ics_url: calendar_meeting_url(meeting), google_url: google_calendar_event_url(meeting), id: meeting.id } %>
