create new meeting form

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
@@ -80,6 +80,7 @@
   input[type="text"],
   input[type="email"],
   input[type="password"],
+  textarea,
   select{
     @apply w-full block mt-4;
   }
