--- a/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/versions/show.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "main_frame",  src: preview_meetings_path %>
+<%= turbo_frame_tag "main_frame",  src: meetings_path %>
 
 <%= turbo_frame_tag "meeting_frame" do %>
   <% content_for :drawer_aside do %>
