--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
@@ -8,9 +8,10 @@
   <%= javascript_pack_tag "decidim_meetings" %>
 <% end %>
 
-<% content_for :aside do %>
-  <%= render partial: "decidim/meetings/shared/meetings_aside", locals: { main_action: true, search_variable:, filter_options: } %>
-<% end %>
+<%= turbo_frame_tag "main_frame" do %>
+  <% content_for :aside do %>
+    <%= render partial: "decidim/meetings/shared/meetings_aside", locals: { main_action: true, search_variable:, filter_options: } %>
+  <% end %>
 
   <%= render layout: "layouts/decidim/shared/layout_two_col" do %>
     <% if display_map %>
