make form element block when they're surrounded by form__wrapper class

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_forms.scss
@@ -77,11 +77,20 @@
     @apply mt-4;
   }
 
-  input[type="text"],
+  input[type="date"],
+  input[type="datetime-local"],
   input[type="email"],
+  input[type="month"],
+  input[type="number"],
   input[type="password"],
-  textarea,
-  select{
+  input[type="search"],
+  input[type="tel"],
+  input[type="text"],
+  input[type="time"],
+  input[type="url"],
+  input[type="week"],
+  select,
+  textarea{
     @apply w-full block mt-4;
   }
 }
