--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_documents.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_documents.scss
@@ -1,10 +1,14 @@
 .documents{
   &__container{
     @apply mt-10 divide-y divide-background [&>*]:py-4 first:[&>*]:pt-0 last:[&>*]:pb-0;
+
+    > *{
+      @apply flex items-center justify-between gap-4;
+    }
   }
 
   &__collection-trigger{
-    @apply mt-8 flex gap-2 w-full md:max-w-[50%] text-sm bg-background;
+    @apply mt-8 flex gap-2 w-full md:max-w-[50%] text-lg bg-background;
 
     > span{
       @apply font-normal text-gray-2;
@@ -39,7 +43,7 @@
   }
 
   &__collection-content{
-    @apply md:pl-8 w-full md:max-w-[50%] border-t-0;
+    @apply md:pl-8 md:border-l-4 border-background-4 mt-4 w-full border-t-0;
 
     &[aria-hidden="true"]{
       @apply md:hidden;
@@ -48,5 +52,9 @@
 
   &__collection-content &__container{
     @apply mt-4 pt-4 border-t border-background;
+  }
+
+  &__container .card__list-text{
+    @apply text-sm;
   }
 }
