--- a/decidim-core/app/views/decidim/application/_document.erb
+++ b/decidim-core/app/views/decidim/application/_document.erb
@@ -1,14 +1,24 @@
-<%# REDESIGN_PENDING: use the card list (small one) once verifications merged (https://github.com/decidim/decidim/pull/9759) %>
-<div id="<%= dom_id(document) %>" class="card__list-content">
-  <%= link_to document.url, target: "_blank", rel: "noopener noreferrer", class: "card__list-title", title: t("decidim.application.document.download") do %>
-    <%= icon "download-cloud-2-line", class: "inline-block w-4 h-4 mr-2 text-gray fill-current" %>
-    <%= attachment_title(document) %>
-  <% end %>
-  <% if document.description.present? %>
-    <div class="card__list-text"><%= translated_attribute(document.description) %></div>
-  <% end %>
-  <div class="card__list-metadata">
-    <span><%= icon "file-text-line" %><%= document.file_type %></span>
-    <span><%= icon "scales-2-line" %><%= number_to_human_size(document.file_size) %></span>
+<div id="<%= dom_id(document) %>">
+  <div class="card__list-content">
+    <%= link_to document.url, target: "_blank", rel: "noopener noreferrer", class: "card__list-title", title: t("decidim.application.document.download") do %>
+      <%= icon "download-cloud-2-line", class: "inline-block w-4 h-4 mr-2 text-gray fill-current" %>
+      <%= attachment_title(document) %>
+    <% end %>
+    <% if document.description.present? %>
+      <div class="card__list-text"><%= translated_attribute(document.description) %></div>
+    <% end %>
+    <div class="card__list-metadata">
+      <span><%= icon "file-text-line" %><%= document.file_type %></span>
+      <span><%= icon "scales-2-line" %><%= number_to_human_size(document.file_size) %></span>
+    </div>
   </div>
+  <%= link_to document.url,
+              target: "_blank",
+              rel: "noopener noreferrer",
+              class: "button button__sm button__transparent-secondary flex-none",
+              title: t("decidim.application.document.download"),
+              data: { "external-link": false } do %>
+    <%= icon "download-cloud-2-line" %>
+    <%= t("decidim.application.document.download") %>
+  <% end %>
 </div>
