--- a/decidim-meetings/app/views/decidim/meetings/layouts/redesigned_live_event.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/layouts/redesigned_live_event.html.erb
@@ -3,6 +3,10 @@
   <head>
     <title><%= decidim_page_title %></title>
     <%= render partial: "layouts/decidim/redesigned_head" %>
+
+    <%# REDESIGN PENDING: for performance reasons defer this javacript call would be good, although there are references to jquery that need to be reviewed %>
+    <%= javascript_pack_tag "decidim_meetings" %>
+    <%= javascript_pack_tag "decidim_forms" %>
     <%= stylesheet_pack_tag "decidim_meetings", media: "all" %>
     <%= stylesheet_pack_tag "decidim_forms", media: "all" %>
   </head>
@@ -47,9 +51,5 @@
 
     <%= render partial: "layouts/decidim/data_consent_warning" %>
     <%= cell("decidim/data_consent", current_organization) %>
-
-    <%= render partial: "layouts/decidim/redesigned_decidim_javascript" %>
-    <%= javascript_pack_tag "decidim_meetings" %>
-    <%= javascript_pack_tag "decidim_forms" %>
   </body>
 </html>
