minimal fixes live events

--- a/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
+++ b/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
@@ -48,7 +48,7 @@
       }
 
       & ~ *{
-        @apply p-4 space-y-4;
+        @apply p-4;
 
         // dynamic content
         > :first-child{
