--- a/decidim-meetings/app/views/decidim/meetings/polls/questions/_published_question.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/polls/questions/_published_question.html.erb
@@ -4,7 +4,7 @@
   <p><%= translated_attribute(question.body) %></p>
 
   <% @form = form || Decidim::Meetings::AnswerForm.new(question_id: question.id, current_user: current_user) %>
-  <%= decidim_form_for(@form, url: meeting_polls_answers_path(meeting), method: :post, remote: true, html: { class: "form-defaults" }, data: { "safe-path" => meeting_live_event_path(meeting) }) do |form| %>
+  <%= decidim_form_for(@form, url: meeting_polls_answers_path(meeting), method: :post, remote: true, html: { class: "form-defaults mt-4" }, data: { "safe-path" => meeting_live_event_path(meeting) }) do |form| %>
     <div class="answer question" data-max-choices="<%= question.max_choices %>">
       <%= render partial: "decidim/meetings/polls/answers/#{question.question_type}", locals: { answer: @form.answer, question: question, answer_form: form, disabled: question.answered_by?(current_user), field_id: question.id  } %>
 
