--- a/decidim-meetings/app/packs/stylesheets/decidim/meetings/_year_calendar.scss
+++ b/decidim-meetings/app/packs/stylesheets/decidim/meetings/_year_calendar.scss
@@ -5,7 +5,7 @@
     @apply flex items-center gap-4;
 
     &-container{
-      @apply flex justify-between items-center mb-8
+      @apply flex justify-between items-center mb-8;
     }
 
     &-arrow{
