--- a/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
@@ -19,10 +19,9 @@
       placeholder: t("decidim.meetings.meetings.filters.search"),
       title: t("decidim.meetings.meetings.filters.search"),
       "aria-label": t("decidim.meetings.meetings.filters.search"),
-      data: { disable_dynamic_change: true }
-    %>
+      data: { disable_dynamic_change: true } %>
     <button type="submit" aria-controls="meetings" aria_label="<%= t("decidim.meetings.meetings.filters.search") %>">
-      <%= icon "search-line"  %>
+      <%= icon "search-line" %>
     </button>
   </div>
 
