--- a/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
+++ b/decidim-meetings/app/packs/stylesheets/decidim/meetings/_live_event.scss
@@ -88,7 +88,7 @@
       @apply border-t border-t-background p-4 bg-background-2;
 
       a{
-        @apply underline mb-4 block;
+        @apply my-4 block text-sm underline;
       }
 
       > :first-child{
