--- a/decidim-meetings/app/views/decidim/meetings/polls/questions/_index_admin.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/polls/questions/_index_admin.html.erb
@@ -8,7 +8,7 @@
       <div>
         <p><%= translated_attribute(question.body) %></p>
 
-        <%= link_to t(".edit"), Decidim::EngineRouter.admin_proxy(meeting.component).edit_meeting_poll_path(meeting), target: "_blank", rel: "noopener noreferrer", class: "text-sm mt-4" %>
+        <%= link_to t(".edit"), Decidim::EngineRouter.admin_proxy(meeting.component).edit_meeting_poll_path(meeting), target: "_blank", rel: "noopener noreferrer" %>
 
         <div class="meeting-polls__admin-action meeting-polls__admin-action-question">
           <div><%= t(".question") %></div>
