--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -111,6 +111,11 @@
 
 </div>
 
+<!-- this elements goes outside of the .process__container block -->
+<section class="process__block-reference">
+  <%= resource_reference(current_participatory_space) %>
+</section>
+
 <% if false %>
 <div class="row column">
   <div class="row">
