--- a/decidim-comments/app/cells/decidim/comments/comment/votes.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/votes.erb
@@ -11,12 +11,12 @@
       <span><%= down_votes_count %></span>
     <% end %>
   <% else %>
-    <button class="<%= votes_up_classes %> " title="<%= t("decidim.components.up_vote_button.text") %>" data-open="loginModal">
+    <button class="<%= votes_up_classes %> " title="<%= t("decidim.components.up_vote_button.text") %>" data-dialog-open="loginModal">
       <%= icon "thumb-up-line", class: "fill-secondary" %>
       <%= icon "thumb-up-fill", class: "fill-secondary" %>
       <span><%= up_votes_count %></span>
     </button>
-    <button class="<%= votes_down_classes %> " title="<%= t("decidim.components.down_vote_button.text") %>" data-open="loginModal">
+    <button class="<%= votes_down_classes %> " title="<%= t("decidim.components.down_vote_button.text") %>" data-dialog-open="loginModal">
       <%= icon "thumb-down-line", class: "fill-secondary" %>
       <%= icon "thumb-down-fill", class: "fill-secondary" %>
       <span><%= down_votes_count %></span>
