block activity (pending integration)

--- a/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
+++ b/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
@@ -25,6 +25,10 @@
     & > :last-child{
       @apply md:col-span-4;
     }
+
+    &-span{
+      @apply text-gray-2 font-semibold uppercase;
+    }
   }
 
   &__nav{
