--- a/decidim-core/app/cells/decidim/navbar_admin_link/show.erb
+++ b/decidim-core/app/cells/decidim/navbar_admin_link/show.erb
@@ -1,4 +1,4 @@
-<%= link_to link_url, class: "admin-bar__button" do %>
+<%= link_to link_url, class: "admin-bar__button", data: { turbo: false } do %>
   <span><%= link_name %></span>
   <%= icon link_icon_name, icon_options %>
 <% end %>
