--- a/decidim-core/app/views/layouts/decidim/_admin_links.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_admin_links.html.erb
@@ -2,7 +2,7 @@
   <div class="admin-bar__container">
     <div class="admin-bar">
       <span class="admin-bar__title"><%= t("decidim.admin.titles.panel") %></span>
-      <%= link_to decidim_admin.root_path, class: "admin-bar__button" do %>
+      <%= link_to decidim_admin.root_path, class: "admin-bar__button", data: { turbo: false }  do %>
         <span><%= t("layouts.decidim.user_menu.admin_dashboard") %></span>
         <%= icon "equalizer-line" %>
       <% end %>
