missing block title

--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -134,6 +134,7 @@
         <% end %>
       </div>
 
+      <span class="process__content-block-span"><%= "Last published" %></span>
       <div class="process__block-grid">
         <% linked_blogs.each do |linked_blog| %>
           <%= card_for(linked_blog) %>
