--- a/decidim-conferences/app/views/decidim/conferences/conference_program/_program_item.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conference_program/_program_item.html.erb
@@ -10,6 +10,8 @@
         <ul class="conference__program-category-container">
           <% categories.each_with_index do |category, i| %>
             <li>
+              <!-- NOTE: The data-open attribute throws a console error related with Foundation and a11y-accordion-component.
+              Once Foundation will be remove after redesign, this error won't longer happen -->
               <button id="conference-item-trigger-<%= seed %>-tab<%= i %>" class="conference__program-category" data-controls="conference-item-panel-<%= seed %>-tab<%= i %>" data-open="<%= "true" if i == 0 %>">
                 <%= category.present? ? translated_attribute(category.name) : "other" %>
               </button>
