--- a/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
+++ b/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
@@ -12,11 +12,17 @@
   }
 
   &__container{
-    @apply container mt-6;
+    > :not([id^="html-block"]){
+      @apply container mt-6;
+    }
+
+    > [id^="html-block"]{
+      @apply prose [&+*]:border-t-0;
+    }
   }
 
   &__content-block{
-    @apply grid grid-cols-1 md:grid-cols-4 [&>*]:col-span-1;
+    @apply grid items-start grid-cols-1 md:grid-cols-4 [&>*]:col-span-1;
 
     & > :first-child{
       @apply md:col-span-2 lg:col-span-3 md:[&+*]:col-span-2 lg:[&+*]:col-span-1;
@@ -35,7 +41,7 @@
     @apply divide-y divide-white [&>li]:py-3.5 first:[&>li]:pt-0 last:[&>li]:pb-0;
 
     &-container{
-      @apply ml-0 md:ml-6 bg-primary p-3 md:p-6 rounded w-full md:w-auto self-stretch;
+      @apply ml-0 md:ml-6 bg-primary p-3 md:p-6 rounded w-full md:w-auto self-start;
 
       [id*="dropdown-menu"]{
         @apply mx-0;
