dont show svg on hover/focus

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_identities.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal_identities.scss
@@ -12,7 +12,7 @@
       &:focus,
       &:focus-visible,
       &:hover{
-        @apply border-tertiary [&_svg]:visible outline-none;
+        @apply border-tertiary outline-none;
       }
 
       svg{
