--- a/decidim-debates/app/views/decidim/debates/debates/edit.html.erb
+++ b/decidim-debates/app/views/decidim/debates/debates/edit.html.erb
@@ -10,8 +10,8 @@
 
 <div class="row">
   <div class="columns large-6 medium-centered">
-    <div class="card">
-      <div class="card__content">
+    <div class="card__list">
+      <div class="card__list-content">
         <%= decidim_form_for(@form) do |form| %>
           <%= render partial: "form", locals: { form: form } %>
           <div class="actions">
