--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/show.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/show.erb
@@ -9,7 +9,7 @@
         method: method,
         remote: true,
         class: button_classes,
-        id: "endorsement_button"
+        id: "endorsement-button"
       ) do %>
     <%= label %>
     <%= endorse_icon %>
